# owo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  fixture.yml
.github/workflows/: ci.yml
src/owo/: __init__.py  _heuristic.py  _prompt.py  providers.py  result.py  schema.py
src/owo/eval/: __init__.py  __main__.py
src/owo/eval/fixtures/: balance_en.yaml  balance_ha.yaml  balance_ig.yaml  balance_pcm.yaml  balance_yo.yaml  bill_pay.yaml  buy_airtime.yaml  buy_data.yaml  crypto_sell.yaml  edge_cases.yaml  fallback_unknown.yaml  transfer_en_extended.yaml  transfer_en_missing_amount.yaml  transfer_en_sample.yaml  transfer_ha.yaml  transfer_ig.yaml  transfer_pcm.yaml  transfer_yo.yaml
src/owo/providers/: __init__.py  anthropic.py  openai.py  openrouter.py  whisper.py
tests/: test_parse.py  test_providers.py  test_voice.py
